--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,7 @@
       border-radius: 16px;
       padding: 3em;
       margin-bottom: 2.5em;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
+      box-shadow: none;
     }
     nav { margin-bottom: 2em; }
 
